--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ html {
     scroll-behavior: smooth;
 }
 
+.Apresentações{
+    width: 85%;
+    height: auto;
+    border-radius: 1.5em;
+    margin: 1.5em;
+}
+
 h1 {
     text-align: center;
     font-size: 2.5em;
@@ -330,6 +337,11 @@ button:focus ~ ul{
     main {
         max-width: 95%;
     }
+
+    .Apresentações{
+        width: 95%;
+    }
+
     #LogoSubtitulos {
         flex-direction: column;
     }
