--- a/style.css
+++ b/style.css
@@ -14,10 +14,16 @@ html {
 }
 
 .Apresentações, .Palestras{
-    width: 85%;
+    max-width: 85%;
     height: auto;
     border-radius: 1.5em;
     margin: 1.5em;
+}
+
+picture{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
@@ -89,14 +95,14 @@ li{
     text-align: center;
     list-style: none;
     font-size: 1.25em;
-    padding: 1em;
 }
 
 li > a{
     color: black;
+    padding: 1em;
 }
 
-li:hover,button:hover{
+li:hover,button:hover,li > a:hover{
     background-color: rgb(194, 194, 0);
     cursor: pointer;
 }
@@ -331,6 +337,13 @@ button:focus ~ ul{
     button{
         display: flex;
     }
+    img{
+        width: 50%;
+        height: auto;
+    }
+    .Apresentações{
+        width: 95%;
+    }
 }
 
 @media only screen and (max-width: 650px) {
@@ -338,7 +351,7 @@ button:focus ~ ul{
         max-width: 95%;
     }
 
-    .Apresentações{
+    .Apresentações, source > img{
         width: 95%;
     }
 
